public/css/style.css
/* ... */
.owl-carousel-fullwidth .item, .owl-carousel-fullwidth .fh5co-owl-text-wrap {
  height: 800px;
  display: table;
  width: 100%;
}
@media screen and (max-width: 768px) {
  .owl-carousel-fullwidth .item, .owl-carousel-fullwidth .fh5co-owl-text-wrap {
    height: inherit;
    padding: 5em 0;
  }
}
.owl-carousel-fullwidth .fh5co-owl-text-wrap {
  position: relative;
}
.owl-carousel-fullwidth .item {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top left;
  position: relative;
}
.owl-carousel-fullwidth .item .overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 8;
}
.owl-carousel-fullwidth .item img {
  max-width: 100%;
}
.owl-carousel-fullwidth .item .iphone-image {
  position: relative;
  z-index: 99;
}
.owl-carousel-fullwidth .item .iphone-image .iphone {
  float: right;
  text-align: right;
  position: relative;
  bottom: -12em;
}
@media screen and (max-width: 768px) {
  .owl-carousel-fullwidth .item .iphone-image .iphone {
    bottom: 0em;
    text-align: center;
    float: none !important;
    margin: 0 auto;
    display: block;
  }
}
.owl-carousel-fullwidth .item .iphone-image .iphone img {
  max-width: 100%;
}
.owl-carousel-fullwidth .item .fh5co-owl-text {
  display: table-cell;
  vertical-align: middle;
  z-index: 10;
  position: relative;
}
.owl-carousel-fullwidth .item .fh5co-owl-text a {
  color: rgba(67,151,168);
  background-color: rgba(255,255,255);
  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
}
.owl-carousel-fullwidth .item .fh5co-owl-text a:hover {
  text-decoration: none;
  color: white;
  border-bottom: 1px solid white;
}
.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead, .owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead-2, .owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-sub-lead {
  background-color: rgba(67,151,168, 0.9);
  color: rgb(255,255,255);
  margin: 0;
  padding: 3%;
  border-radius: 15px;
}
.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead {
  font-weight: 700;
  margin-bottom: 20px;
  margin-top: 0;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 50px;
  line-height: 50px;
  background-color: rgba(67,151,168, 0.9);
  color: rgb(255,255,255);
  border-radius: 15px;
  padding: 3%;
}
@media screen and (max-width: 768px) {
  .owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-lead {
    margin-bottom: 20px;
    font-size: 30px;
    line-height: 30px;
    background-color: rgba(67,151,168, 0.9);
    color: rgb(255,255,255);
    border-radius: 15px;
    padding: 3%;
  }
}
.owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-sub-lead {
  font-size: 30px;
  line-height: 30px;
  line-height: 42px;
  font-weight: 100;
  margin-bottom: 30px;
}
@media screen and (max-width: 768px) {
  .owl-carousel-fullwidth .item .fh5co-owl-text .fh5co-sub-lead {
    font-size: 24px;
    line-height: 34px;
  }
}

.js .to-animate,
.js .to-animate-2,
.js .single-animate {
  opacity: 0;
}

@media screen and (max-width: 480px) {
  .col-xxs-12 {
    float: none;
    width: 100%;
  }
}

.row-bottom-padded-lg {
  padding-bottom: 7em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-lg {
    padding-bottom: 2em;
  }
}

.row-bottom-padded-md {
  padding-bottom: 4em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-md {
    padding-bottom: 2em;
  }
}

.row-bottom-padded-sm {
  padding-bottom: 2em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-sm {
    padding-bottom: 2em;
  }
}

.fh5co-animated {
  -webkit-animation-duration: .3s;
  animation-duration: .3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

/*# sourceMappingURL=style.css.map */

